Add content and some images

--- a/index.html
+++ b/index.html
@@ -6,6 +6,42 @@
     <title>Home | My Website</title>
   </head>
   <body>
-    <p>Hello, world!</p>
-  </body>
-</html>
+    <h1>My Projects</h1>
+    <h2>My Background</h2>
+    <p>
+      I was introduced to programming in two ways: <br />
+      <!-- List example -->
+      <ol>
+        <li>Learning QBASIC in High-School (yep, they still taught that)</li>
+        <li>Massive C++ textbook after asking a cousin who worked in the industry about programming</li>
+      </ol>
+
+      <!-- Text formatting examples-->
+      Needless to say, I never touched it again until after graduating from CUNY Hunter College with a BA in Creative Writing. <br>
+
+      I went to college while working in <strong>New York Public Library</strong>, first as a <em>Page</em> and then a <em>Library Technical Assistant</em>. After graduating, I decided to look into tech again since I heard buzz about interesting career opportunities. I was pleasantly surprised when I started learning to program using Ruby. My creative side did not feel supressed as it had when I tried programming in the past. <br> <br>
+      In fact, bringing my creative side to the machine felt downright delightful. So, I decided to become a programmer!
+      <br> <br>
+
+      I <em>love</em> programming using the <strong>Ruby</strong> language. I am using <em><strong>Ruby on Rails</strong></em> primarily for building things on the web. After familiarizing myself with <strong>HTML/CSS</strong>, I've started learning more front-end technologies such vanilla <strong>Javascript</strong> along with <strong>React</strong>. <br> <br>
+
+      <!-- Link example (internal)  -->
+      Please <a href="contact.html">contact me</a> for job opportunities. Looking forward to it! <br><br>
+
+
+      <h2>Aspirations</h2>
+
+      <h3>Get a FT job in Web Dev space</h3>
+
+      <h3>Maintain a habit of learning</h3>
+
+      <h3>Return to Jiu-Jitsu</h3>
+
+      <!-- Image example -->
+      <img src="images/no-social-media.png" alt="no social media"><br> Don't follow me on social media. Don't follow anyone. It's basically poison. <br><br>
+
+      <!-- Link axample (external, opening a new window) -->
+      Oh but I do have a <a href="https://www.youtube.com/channel/UCKvgs69Oy2ijPjPzHZ63rJQ?view_as=subscriber" target="_blank" rel="noopener">YouTube channel</a> though.Checkout the playlists if you want to learn Web Development in 2020! And don't forget to subscribe for tutorials and thoughts on coding :)
+    </p>
+    </body>
+    </html>
