Add nav bar and more content

--- a/code.html
+++ b/code.html
@@ -6,6 +6,11 @@
     <title>Code | My Website</title>
   </head>
   <body>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="code.html">Code</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
     <img src="images/html-banner.jpg" alt="HTML" />
     <p>
       The tables below don't include all HTML tags, but they do list many of the
@@ -29,6 +34,28 @@
         <td><code>p</code></td>
         <td>paragraph</td>
         <td>include a paragraph of text</td>
+      </tr>
+      <tr>
+        <td><code>div</code></td>
+        <td>division</td>
+        <td>defines a section of the document</td>
+      </tr>
+      <tr>
+        <td><code>header</code></td>
+        <td>header</td>
+        <td>
+          container for introductory content or a set of navigational links
+        </td>
+      </tr>
+      <tr>
+        <td><code>ol</code></td>
+        <td>ordered list</td>
+        <td>defines an ordered list (numerical or alphabetical)</td>
+      </tr>
+      <tr>
+        <td><code>ul</code></td>
+        <td>unordered list</td>
+        <td>defines an unordered (bulleted) list</td>
       </tr>
       <tr>
         <td><code>table</code></td>
@@ -61,6 +88,26 @@
         <th>Purpose</th>
         <th>Example</th>
         <th>Result</th>
+      </tr>
+      <tr>
+        <td><code>span</code></td>
+        <td>span</td>
+        <td>select inline area for CSS styling</td>
+        <td>
+          <code>&lt;span&gt;make it really pop with CSS&lt;/span&gt;</code>
+        </td>
+        <td><span style="color: red;">make it really pop with CSS</span></td>
+      </tr>
+      <tr>
+        <td><code>li</code></td>
+        <td>list item</td>
+        <td>defines a list item</td>
+        <td><code>&lt;li&gt;Pick up milk&lt;/li&gt;</code></td>
+        <td>
+          <ol>
+            <li>Pick up milk</li>
+          </ol>
+        </td>
       </tr>
       <tr>
         <td><code>em</code></td>
