Change home link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Nav list -->
     <header class="nav-menu">
       <button class="button">
-        <a href="/" class="link">Home</a>
+        <a href="index.html" class="link">Home</a>
       </button>
       <button class="button">
         <a href="code.html" class="link">Code</a>
