Add Jekyll boilerplate

--- a/index.html
+++ b/index.html
@@ -1,122 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/main.css" />
-    <title>Home | My Website</title>
-  </head>
-  <body>
-    <!-- Nav list -->
-    <header class="nav-menu">
-      <button class="button">
-        <a href="index.html" class="link">Home</a>
-      </button>
-      <button class="button">
-        <a href="code.html" class="link">Code</a>
-      </button>
-      <button class="button">
-        <a href="contact.html" class="link">Contact</a>
-      </button>
-    </header>
-    <div class="main-content">
-      <div>
-        <h1 id="projects">My Projects</h1>
-        <ul>
-          <li>Ruby on Rails</li>
-          <li>React</li>
-          <li>Vanilla JS</li>
-          <li>HTML/CSS</li>
-        </ul>
-      </div>
-      <div>
-        <h2 id="background">My Background</h2>
-      </div>
-      <div>
-        <p>
-          I was introduced to programming in the following two ways: <br />
-          <!-- List example -->
-        </p>
+---
+layout: default
+title: Home
+---
 
-        <ol>
-          <li>Learning QBASIC in High-School (yep, they still taught that)</li>
-          <li>
-            Massive C++ textbook after asking a cousin who worked in the
-            industry about programming
-          </li>
-        </ol>
-
-        <!-- Text formatting examples-->
-        Needless to say, I never touched it again until after graduating from
-        CUNY Hunter College with a BA in Creative Writing. <br />
-
-        I went to college while working in
-        <strong>New York Public Library</strong>, first as a <em>Page</em> and
-        then a <em>Library Technical Assistant</em>. After graduating, I decided
-        to look into tech again since I heard buzz about interesting career
-        opportunities. I was pleasantly surprised when I started learning to
-        program using Ruby. My creative side did not feel supressed as it had
-        when I tried programming in the past. <br />
-        <br />
-        In fact, bringing my creative side to the machine felt downright
-        delightful. So, I decided to become a programmer!
-        <br />
-        <br />
-
-        I <em>love</em> programming using the <strong>Ruby</strong> language. I
-        am using <em><strong>Ruby on Rails</strong></em> primarily for building
-        things on the web. After familiarizing myself with
-        <strong>HTML/CSS</strong>, I've started learning more front-end
-        technologies such vanilla <strong>Javascript</strong> along with
-        <strong>React</strong>. <br />
-        <br />
-
-        <!-- Link example (internal) and span example with inline style -->
-        <span
-          >Please
-          <a href="contact.html" style="text-decoration: none;">contact me</a>
-          for job opportunities. Looking forward to it!</span
-        >
-        <br /><br />
-      </div>
-      <div>
-        <h2 id="aspirations">Aspirations</h2>
-
-        <h3>Get a FT job in Web Dev space</h3>
-
-        <h3>Maintain a habit of learning</h3>
-
-        <h3>Return to Jiu-Jitsu</h3>
-      </div>
-      <!-- Image example -->
-      <img
-        src="images/no-social-media.png"
-        alt="no social media"
-        class="social-media-logo"
-      /><br />
-      <p>
-        Don't follow me on social media. Don't follow anyone. It's basically
-        poison.
-      </p>
-      <br /><br />
-
-      <!-- Link axample (external, opening a new window) -->
-      <p>
-        Oh but I do have a
-        <a
-          href="https://www.youtube.com/channel/UCKvgs69Oy2ijPjPzHZ63rJQ?view_as=subscriber"
-          target="_blank"
-          rel="noopener"
-          class="link"
-          >YouTube channel</a
-        >
-        though. Checkout the playlists if you want to learn Web Development in
-        2020!
-        <span
-          >And don't forget to subscribe for tutorials and thoughts on coding
-          :)</span
-        >
-      </p>
-    </div>
-  </body>
-</html>
+<h1>"Hello, world!"</h1>
