Add a blog and post layouts. Add social media data file for footer use.

--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,20 @@
 ---
 layout: blog
 title: Blog
-permalink: /blog.html
+permalink: /blog
 ---
 
+<!-- Check difference between /blog and /blog.html permalink -->
+<!-- permalink: /blog.html -->
 <h1>Blog Page</h1>
+
+<h2>Latest Posts</h2>
+
+<ul>
+  {% for post in site.posts %}
+  <li>
+    <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+    {{ post.exercpt }}
+  </li>
+  {% endfor %}
+</ul>
