Add sass directory and split css into resets, mobile, and desktop styles. Add more html pages for future development.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
 ---
-layout: default
+layout: index
 title: Home
 ---
-
-<h1>Web Development & Design</h1>
+<section id="landing" class="box landing-box">
+  <h1>Web Development <br>&& Design</h1>
+  <h2>Andrey Syroyezhkin</h2>
+  <h3>I Create Custom Websites and Software Using Ruby on Rails, Javascript, and Modern CSS. <br>&& Talk, Write, and
+    Make Videos About Tech.</h3>
+  <h4>Open to Discussing Full-Time Job Opportunities. <br>&& Available for Freelance Contracts, Consulting, and
+    Collaboration.<br> Best Reached by Email: AndreySyroyezhkin@pm.me</h4>
+  <p class="landing-copy">
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat ad nihil
+    corrupti laudantium nulla minus provident quas alias esse corporis velit
+    omnis mollitia magnam ex incidunt cupiditate quam, vel harum.
+  </p>
+  <p class="landing-copy">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus mollitia
+    omnis laboriosam sint voluptas ullam dolor, aspernatur, minus reprehenderit
+    vero rem saepe! Officia veritatis reiciendis quas ex rem incidunt nobis.
+  </p>
+</section>
